--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width", initial-scale="1.0">
     <title>Empadinhas Divinas</title>
     <link rel="stylesheet" href="css/index.css" type="text/css" />
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css">
     <script src="js/jquery-3.6.0.min.js"></script>
 </head>
 <body>
@@ -33,7 +34,7 @@
 
     <div class="modalLogin">
         <div class="header">
-            <button class="btnBack">Voltar</button>
+            <button class="btnBack"><i class="bi bi-arrow-left"></i></button>
             <button class="btnCad">Cadastrar</button>
         </div>
 
